--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -333,6 +333,9 @@
       <pointsize>14</pointsize>
      </font>
     </property>
+    <property name="echoMode">
+     <enum>QLineEdit::Password</enum>
+    </property>
     <property name="placeholderText">
      <string>Clave de usuario</string>
     </property>
